force-app/main/default/objects/Lead_Report_Id__c/Lead_Report_Id__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Lead Report Id</label>
</CustomObject>