force-app/main/default/objects/Lead_Report_Id__c/fields/Allowed_Accounts__c.field-meta.xml
<CustomField>
    <fullName>Allowed_Accounts__c</fullName>
    <label>Allowed Accounts</label>
    <type>TextArea</type>
</CustomField>