force-app/main/default/objects/Lead_Report_Id__c/fields/Allowed_Emails__c.field-meta.xml
<CustomField>
    <fullName>Allowed_Emails__c</fullName>
    <label>Allowed Emails</label>
    <length>255</length>
    <type>Text</type>
</CustomField>