force-app/main/default/objects/Lead_Report_Id__c/fields/Evening_Report_Id__c.field-meta.xml
<CustomField>
    <fullName>Evening_Report_Id__c</fullName>
    <label>Evening Report Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>