force-app/main/default/objects/Lead_Report_Id__c/fields/Send_To_All__c.field-meta.xml
<CustomField>
    <fullName>Send_To_All__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send To All</label>
    <type>Checkbox</type>
</CustomField>